# OpenIndy

./: .gitattributes  .gitignore  .gitmodules  Jenkinsfile  README-Windows-MinGW.md  README-build.md  README-ubuntu1604.md  README-ubuntu1804.md  README.md  cadIncludes.pri  jenkinsfile  main.cpp  openIndy.pro  us.stackdump
appui/: appui.pro  config.pri  dependencies.pri  includes.pri  version.pri
controller/: clipboardutil.cpp  clipboardutil.h  console.cpp  console.h  controller.cpp  controller.h  controllersensoractions.h  datalisthandler.cpp  datalisthandler.h  deletefeaturesfunctor.cpp  deletefeaturesfunctor.h  displayattribute.cpp  displayattribute.h  featureattributes.cpp  featureattributes.h  featureattributesexchange.cpp  featureattributesexchange.h  featurecontainer.cpp  featurecontainer.h  featuresorter.cpp  featuresorter.h  featureupdater.cpp  featureupdater.h  featureutil.cpp  featureutil.h  guiconfiguration.cpp  guiconfiguration.h  measurebehaviorlogic.cpp  measurebehaviorlogic.h  measurebehaviortypes.h  modelmanager.cpp  modelmanager.h  nominalattributeexchange.cpp  nominalattributeexchange.h  oiconfigstate.cpp  oiconfigstate.h  oidataimporter.cpp  oidataimporter.h  oifeaturestate.cpp  oifeaturestate.h  (+29 more)
controller/config/: defaultsconfiginit.cpp  defaultsconfiginit.h  featuretablecolumnconfig.cpp  featuretablecolumnconfig.h  featuretablesortingconfig.cpp  featuretablesortingconfig.h  measurementconfigmanager.cpp  measurementconfigmanager.h  observationtablecolumnconfig.cpp  observationtablecolumnconfig.h  parameterdisplayconfig.cpp  parameterdisplayconfig.h  projectconfig.cpp  projectconfig.h  readingtablecolumnconfig.cpp  readingtablecolumnconfig.h  sensorconfigurationmanager.cpp  sensorconfigurationmanager.h  trafoparamtablecolumnconfig.cpp  trafoparamtablecolumnconfig.h
controller/exchange/: dataexchanger.cpp  dataexchanger.h  observationimporter.cpp  observationimporter.h  (+2 more)
db/: element.sql  oisystemdb.sql  oisystemdb.sqlite
doc/: index.html
lib/armadillo-3.910.0/: CMakeLists.txt  README.txt  configure  docs.html  index.html
lib/armadillo-3.910.0/build_aux/rpm/: armadillo.spec
lib/armadillo-3.910.0/examples/: Makefile.cmake  example1.cpp  example2.cpp
lib/armadillo-3.910.0/examples/example1_win32/: example1_win32.sln  example1_win32.vcproj
lib/armadillo-3.910.0/examples/example2_win32/: example2_win32.sln  example2_win32.vcproj
lib/armadillo-3.910.0/examples/framework_mac/Accelerate.framework/: Accelerate
lib/armadillo-3.910.0/examples/framework_mac/Accelerate.framework/Versions/A/Frameworks/vImage.framework/: vImage
lib/armadillo-3.910.0/examples/framework_mac/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/: vecLib
lib/armadillo-3.910.0/include/armadillo_bits/: config.hpp
lib/armadillo-3.910.0/src/: wrap_libs.cpp
models/: activefeaturefunctionsmodel.cpp  activefeaturefunctionsmodel.h  availableelementstreeviewproxymodel.cpp  availableelementstreeviewproxymodel.h  availablefunctionslistmodel.cpp  availablefunctionslistmodel.h  availablefunctionslistproxymodel.cpp  availablefunctionslistproxymodel.h  bundlegeometriesmodel.cpp  bundlegeometriesmodel.h  bundleparametertableproxymodel.cpp  bundleparametertableproxymodel.h  bundlestationsmodel.cpp  bundlestationsmodel.h  bundlesystemsmodel.cpp  bundlesystemsmodel.h  bundletemplatesmodel.cpp  bundletemplatesmodel.h  featuredifferenceproxymodel.cpp  featuredifferenceproxymodel.h  featuredifferencetablemodel.cpp  featuredifferencetablemodel.h  featuregraphicstreeviewproxymodel.cpp  featuregraphicstreeviewproxymodel.h  featuretablemodel.cpp  featuretablemodel.cpp~RF8a3803.TMP  featuretablemodel.h  featuretableproxymodel.cpp  featuretableproxymodel.h  featuretreeitem.cpp  featuretreeitem.h  featuretreeviewmodel.cpp  featuretreeviewmodel.h  functionstatisticmodel.cpp  functionstatisticmodel.h  functiontablemodel.cpp  functiontablemodel.h  functiontableproxymodel.cpp  functiontableproxymodel.h  functionweightdelegate.cpp  (+50 more)
res/: openIndy.icns  openIndy.rc  res.qrc
res-rt/: openIndy.bat  openIndy.sh
schema/: oiProjectData_neu.cam  oiProject_test-1.xml  oiProject_test-2.xml  oiProject_test-3.xml  openIndySchema.cam  openIndySchema.xsd  openIndySchema_neu.cam  openIndySchema_neu.xsd
src/: configuration.cpp  configuration.h  connectionconfig.cpp  connectionconfig.h  console.h  coordinatesystem.cpp  coordinatesystem.h  direction.cpp  direction.h  element.cpp  element.h  elementdependencies.cpp  elementdependencies.h  feature.cpp  feature.h  featureattributes.h  featurecontainer.cpp  featurecontainer.h  featurewrapper.cpp  featurewrapper.h  function.cpp  function.h  functionconfiguration.cpp  functionconfiguration.h  geometry.cpp  geometry.h  measurementconfig.cpp  measurementconfig.h  observation.cpp  observation.h  oiemitter.cpp  oiemitter.h  oijob.cpp  oijob.h  oimetadata.cpp  oimetadata.h  oirequestresponse.cpp  oirequestresponse.h  pluginmetadata.cpp  pluginmetadata.h  (+24 more)
test/: test.pro
ui/: availableelementstreeviewproxymodel.cpp  availableelementstreeviewproxymodel.h  createfeature.cpp  createfeature.h  createfeature.ui  createfeaturedialog.cpp  createfeaturedialog.h  createfeaturedialog.ui  customparameterwidget.cpp  customparameterwidget.h  edittrafoparamdialog.cpp  edittrafoparamdialog.h  exportnominaldialog.cpp  exportnominaldialog.h  exportnominaldialog.ui  featuredata.cpp  featuredata.h  featuredata.ui  featuregraphicsitem.cpp  featuregraphicsitem.h  featuregraphicstreeviewproxymodel.cpp  featuregraphicstreeviewproxymodel.h  featureoverviewdelegate.cpp  featureoverviewdelegate.h  featureoverviewproxymodel.cpp  featureoverviewproxymodel.h  featureovserviewproxymodel.cpp  featureovserviewproxymodel.h  featuretablemodel.cpp  featuretableproxymodel.cpp  featuretreeitem.cpp  featuretreeitem.h  featuretreeviewmodel.cpp  featuretreeviewmodel.h  functionpluginloader.cpp  functionpluginloader.h  functionpluginloader.ui  functionstatistic.cpp  functionstatistic.h  geometrytypesproxymodel.cpp  (+97 more)
uml/: ActivateStationAndSensor.activity.violet.html  architecture.class.violet.html
(+659 files in other folders)
